--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- 
+	Created by : Setiadi
+	NIM : 10121251
+    IF-7
+-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
